--- a/packages/app/.gitignore
+++ b/packages/app/.gitignore
@@ -31,7 +31,8 @@ local.properties
 *.iml
 *.hprof
 .cxx/
-
+*.keystore
+!debug.keystore
 
 # node.js
 #
@@ -39,11 +40,6 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
-# BUCK
-buck-out/
-\.buckd/
-*.keystore
-!debug.keystore
 
 # fastlane
 #
@@ -66,6 +62,9 @@ fastlane/test_output
 # Ruby / CocoaPods
 /ios/Pods/
 /vendor/bundle/
+
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
 
 # when using the yarn bundle command
 /ios/assets
