--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -52,6 +52,7 @@
     "react-native-gesture-handler": "2.9.0",
     "react-native-linear-gradient": "2.6.2",
     "react-native-localize": "^2.2.6",
+    "react-native-mime-types": "^2.4.0",
     "react-native-mmkv": "^2.6.3",
     "react-native-pager-view": "^6.2.0",
     "react-native-qrcode-svg": "^6.2.0",
