--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -35,6 +35,7 @@
     "@azzapp/shared": "*",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-camera-roll/camera-roll": "^5.3.1",
+    "@react-native-clipboard/clipboard": "^1.8.1",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "appcenter": "^4.4.5",
     "appcenter-analytics": "^4.4.5",
@@ -65,6 +66,7 @@
     "react-native-vision-camera": "^2.15.4",
     "react-native-web": "^0.19.1",
     "react-phone-number-input": "^3.2.19",
+    "react-native-reanimated-carousel": "^3.3.0",
     "react-relay": "^14.1.0",
     "react-transition-group": "^4.4.5",
     "use-debounce": "^9.0.3"
