feat: Add post reaction and post detail design (#377)
* post like reaction

* fix Bug-20230512-3 - Home_Page.Related_Posts - PostAutor is not clickable #365
---------

Co-authored-by: batical <batical@users.noreply.github.com>

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -33,6 +33,9 @@
     "@azzapp/i18n": "*",
     "@azzapp/relay": "*",
     "@azzapp/shared": "*",
+    "@formatjs/intl-locale": "^3.3.0",
+    "@formatjs/intl-relativetimeformat": "^11.2.2",
+    "@formatjs/intl-pluralrules": "^5.2.2",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-camera-roll/camera-roll": "^5.3.1",
     "@react-native-clipboard/clipboard": "^1.8.1",
