fix: Replace default ActivityIndicator (#433)
* Replace default ActivityIndicator

* fix web build

* don't compile json file with babel in lib

* fix tests

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -16,7 +16,7 @@
     "lib:clean": "rimraf lib",
     "lib:definition": "tsc -p tsconfig.lib.json",
     "lib:definition:watch": "yarn lib:definition --watch",
-    "lib:compile": "babel src --config-file ./babel.config.lib.js -d lib --extensions '.ts,.tsx,.js,.jsx,.json'",
+    "lib:compile": "babel src --config-file ./babel.config.lib.js -d lib --extensions '.ts,.tsx,.js,.jsx'",
     "lib:compile:watch": "yarn lib:compile --watch",
     "assets:copy": "node scripts/copy-assets",
     "assets:watch": "yarn assets:copy && node scripts/watch-assets",
@@ -49,6 +49,7 @@
     "i18n-iso-countries": "^7.5.0",
     "libphonenumber-js": "^1.10.24",
     "lodash": "^4.17.21",
+    "lottie-react-native": "^6.0.0-rc.6",
     "react": "^18.2.0",
     "react-intl": "^6.3.2",
     "react-native": "0.71.5",
