--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -73,7 +73,9 @@
     "react-native-reanimated-carousel": "^3.3.0",
     "react-relay": "^14.1.0",
     "react-transition-group": "^4.4.5",
-    "use-debounce": "^9.0.3"
+    "use-debounce": "^9.0.3",
+    "react-hook-form": "^7.43.9",
+    "@hookform/resolvers": "^3.1.0"
   },
   "devDependencies": {
     "@testing-library/react-native": "^12.0.1",
