--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -70,6 +70,7 @@
     "react-native-view-shot": "^3.5.0",
     "react-native-vision-camera": "^2.15.4",
     "react-native-web": "^0.19.1",
+    "react-native-email-link": "^1.14.5",
     "react-phone-number-input": "^3.2.19",
     "react-native-reanimated-carousel": "^3.3.0",
     "react-relay": "^14.1.0",
