build: remove cache on graphql-codegen (#460)

--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,8 @@
     },
     "//#graphql-codegen": {
       "dependsOn": [],
-      "inputs": ["packages/**/*.graphql"]
+      "inputs": ["packages/**/*.graphql"],
+      "cache": false
     },
     "lint": {},
     "test": {},
