--- a/packages/app/tsconfig.lib.json
+++ b/packages/app/tsconfig.lib.json
@@ -14,5 +14,6 @@
     "./src/**/*.js",
     "./src/**/*.jsx",
     "./src/**/*.json"
-  ]
+  ],
+  "exclude": ["node_modules", "lib", "**/__mocks__/*", "**/__tests__/*"]
 }
