--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -9,8 +9,9 @@
     }
   },
   "scripts": {
+    "test": "jest",
     "dev": "tsc --watch",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.lib.json",
     "typecheck": "tsc --noEmit",
     "clean": "rm -rf lib && rm -f tsconfig.tsbuildinfo"
   },
