--- a/packages/shared/turbo.json
+++ b/packages/shared/turbo.json
@@ -8,6 +8,9 @@
     },
     "typecheck": {
       "inputs": ["src/**"]
+    },
+    "test": {
+      "inputs": ["src/**", "jest.config.js", "scripts/jestSetup.js"]
     }
   }
 }
