--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky install",
     "lint": "eslint .",
     "typecheck": "turbo run typecheck",
-    "test": "jest",
+    "test": "turbo run test",
     "build": "turbo run build",
     "dev": "node ./scripts/dev.js",
     "predev": "yarn graphql-codegen",
@@ -77,6 +77,7 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.7",
     "relay-compiler": "^14.1.0",
+    "ts-jest": "^29.1.0",
     "turbo": "^1.8.8",
     "typescript": "^5.0.3"
   },
