--- a/packages/app/turbo.json
+++ b/packages/app/turbo.json
@@ -37,6 +37,9 @@
     "typecheck": {
       "dependsOn": ["//#relay:build", "^build"],
       "inputs": ["src/**"]
+    },
+    "test": {
+      "inputs": ["src/**", "jest.config.js", "scripts/jestSetup.js"]
     }
   }
 }
