--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "dev": "tsc --watch",
-    "build": "tsc",
+    "build": "tsc  -p tsconfig.lib.json",
     "typecheck": "tsc --noEmit",
     "clean": "rm -rf lib && rm -f tsconfig.tsbuildinfo"
   },
