--- a/packages/data/tsconfig.build.json
+++ b/packages/data/tsconfig.build.json
@@ -15,6 +15,8 @@
     "package.json",
     "tsconfig.json",
     "tsconfig.build.json",
-    "babel.config.js"
+    "babel.config.js",
+    "**/__mocks__/*",
+    "**/__tests__/*"
   ]
 }
