--- a/packages/data/package.json
+++ b/packages/data/package.json
@@ -20,7 +20,9 @@
     "build": "yarn compile && yarn definition",
     "dev": "yarn compile:watch & yarn definition:watch",
     "typecheck": "yarn definition",
-    "generate-db-type": "prisma generate",
+    "generate-migration": "drizzle-kit generate:mysql --config ./src/drizzle.config.ts",
+    "push-migration": "drizzle-kit push:mysql --config ./src/drizzle.config.ts",
+    "introspect": "drizzle-kit introspect:mysql --config ./src/drizzle.config.ts",
     "definition": "tsc -p tsconfig.build.json",
     "definition:watch": "yarn definition --watch",
     "compile": "babel src --config-file ./babel.config.js -d lib --extensions '.ts,.tsx,.js,.jsx,.json'",
@@ -36,21 +38,19 @@
     "@azzapp/i18n": "*",
     "@azzapp/relay": "*",
     "@azzapp/shared": "*",
+    "@graphql-tools/schema": "^7.0.0",
     "@paralleldrive/cuid2": "^2.2.0",
     "@planetscale/database": "^1.6.0",
-    "@prisma/client": "^4.12.0",
     "dataloader": "^2.2.2",
+    "drizzle-orm": "^0.26.5",
     "graphql": "^16.6.0",
     "graphql-relay": "^0.10.0",
     "graphql-scalars": "^1.21.3",
-    "kysely": "^0.24.2",
-    "kysely-planetscale": "^1.3.0",
-    "lodash": "^4.17.21",
     "graphql-tag": "^2.12.6",
-    "@graphql-tools/schema": "^7.0.0"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.192",
-    "prisma": "^4.12.0"
+    "drizzle-kit": "^0.18.1"
   }
 }
