feat: Rudimentary web rendering (#497)
* Feat: Rudimentary web rendering

* fix next versions disparenccoes

* force-dynamic

for the moment

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,9 +23,9 @@
     "@azzapp/i18n": "*",
     "@azzapp/relay": "*",
     "@azzapp/shared": "*",
-    "@formatjs/intl-locale": "^3.3.0",
-    "@formatjs/intl-relativetimeformat": "^11.2.2",
-    "@formatjs/intl-pluralrules": "^5.2.2",
+    "@formatjs/intl-locale": "^3.3.2",
+    "@formatjs/intl-relativetimeformat": "^11.2.4",
+    "@formatjs/intl-pluralrules": "^5.2.4",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-camera-roll/camera-roll": "^5.3.1",
     "@react-native-clipboard/clipboard": "^1.8.1",
@@ -41,7 +41,7 @@
     "lodash": "^4.17.21",
     "lottie-react-native": "^6.0.0-rc.6",
     "react": "^18.2.0",
-    "react-intl": "^6.3.2",
+    "react-intl": "^6.4.4",
     "react-native": "0.71.5",
     "react-native-haptic-feedback": "^2.0.3",
     "react-native-encrypted-storage": "^4.0.3",
@@ -71,7 +71,7 @@
   "devDependencies": {
     "@testing-library/react-native": "^12.0.1",
     "@types/chroma-js": "^2.4.0",
-    "@types/react": "^18.0.31",
+    "@types/react": "18.2.12",
     "@types/react-relay": "^14.1.2",
     "@types/react-test-renderer": "^18.0.0",
     "@types/react-transition-group": "^4.4.5",
