--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -17,14 +17,14 @@
     "@azzapp/data": "*",
     "@azzapp/shared": "*",
     "lodash": "^4.17.21",
-    "next": "^13.4.3",
+    "next": "^13.4.5",
     "react": "^18.2.0",
     "react-admin": "^4.9.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.31",
-    "@types/react-dom": "^18.0.11"
+    "@types/react": "18.2.12",
+    "@types/react-dom": "^18.2.5"
   }
 }
