--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,18 +19,20 @@
     "@azzapp/relay": "*",
     "@azzapp/shared": "*",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@formatjs/swc-plugin-experimental": "^0.3.7",
     "@paralleldrive/cuid2": "^2.2.0",
     "bcrypt-ts": "^3.0.0",
+    "classnames": "^2.3.2",
     "lodash": "^4.17.21",
-    "next": "^13.4.3",
+    "next": "^13.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intl": "^6.3.2",
+    "react-intl": "^6.4.4",
     "react-relay": "^14.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.31",
-    "@types/react-dom": "^18.0.11"
+    "@types/react": "18.2.12",
+    "@types/react-dom": "^18.2.5"
   }
 }
