rework planetenv script (#537)
* * Add PS environment for branch ps2

---------

Co-authored-by: batical <batical@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,8 @@ on:
       - main
       - staging
       - production
+env:
+  pscale_base_directory: .pscale      
 jobs:
   continuous-integration :
     name: Validate and test and Build
