feat(ContactCard): #265 add contact card form (#534)
* feat(ContactCard): #265 add contact card form

* Attach PS environment to branch contactcard

* fix: wrong default contact card and reinit form on profile change

* feat(contactCard): #265 share vcf card

* feat(contactCard): #265 toggle public / display on webcard

* feat(contactCard): #265 add color picker

* fix: take review comments into account

---------

Co-authored-by: mlecoq <mlecoq@users.noreply.github.com>
Co-authored-by: fahbe <shecart.mydev@gmail.com>

--- a/codegen.yml
+++ b/codegen.yml
@@ -38,6 +38,7 @@ generates:
         CardModulePhotoWithTextAndTitle: ../../domains#CardModule as CardModulePhotoWithTextAndTitleModel
         CardModuleSocialLinks:  ../../domains#CardModule as CardModuleSocialLinksModel
         CardModuleBlockText: ../../domains#CardModule as CardModuleBlockTextModel
+        ContactCard: ../../domains#ContactCard as ContactCardModel
       defaultMapper: 'Partial<{T}>'
       maybeValue: 'T extends PromiseLike<infer U> ? Promise<U | null> : T | null'
       scalars:
