--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -67,7 +67,10 @@
     "react-transition-group": "^4.4.5",
     "use-debounce": "^9.0.4",
     "react-hook-form": "^7.43.9",
-    "@hookform/resolvers": "^3.1.0"
+    "@hookform/resolvers": "^3.1.0",
+    "vcard-creator": "^0.6.0",
+    "react-native-blob-util": "^0.18.3",
+    "react-native-share": "^8.2.2"
   },
   "devDependencies": {
     "@testing-library/react-native": "^12.0.1",
