fix: ps merge should not generate error if nothing to merge (#594)

--- a/.github/workflows/ps-merge-pr-main.yml
+++ b/.github/workflows/ps-merge-pr-main.yml
@@ -43,6 +43,7 @@ jobs:
         id: ps-env
         env:
           REF: ${{ steps.prechecks.outputs.ref }}
+        if: exists('env/ps-env-${{ steps.prechecks.outputs.ref }}.sh')   
         working-directory: ${{env.pscale_base_directory}}
         run: env/ps-env-${REF}.sh || false
     
