--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "typescript": "^5.1.3"
   },
   "resolutions": {
-    "@types/react": "18.2.12"
+    "@types/react": "18.2.12",
+    "graphql": "16.6.0"
   }
 }
