--- a/packages/app/ios/Podfile
+++ b/packages/app/ios/Podfile
@@ -1,8 +1,9 @@
+require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
 #require for mono repo
 require_relative '../../../node_modules/react-native/scripts/react_native_pods'
 require_relative '../../../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, min_ios_version_supported
+platform :ios, 13.0
 prepare_react_native_project!
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
 # because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
@@ -21,6 +22,14 @@ if linkage != nil
 end
 
 target 'azzapp' do
+  use_expo_modules!
+  post_integrate do |installer|
+    begin
+      expo_patch_react_imports!(installer)
+    rescue => e
+      Pod::UI.warn e
+    end
+  end
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -59,7 +68,7 @@ target 'azzapp' do
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
              config.build_settings['SWIFT_VERSION'] = '5.0'
-             config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.4'
+             config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
         end
     end
   end
