feat(contactCard): #265 serialize data of contact card (#581)
* feat(contactCard): #265 serialize data of contact card

* feat(contactCard): #265 sign serialized contact card in url

* fix: move crypto to shared component + use iron-webcrypto

* fix: update import

* feat(contactCard): migrate to `expo-contacts`

--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -8,3 +8,5 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=azzapp
 CLOUDINARY_API_KEY=281326962786824
 CLOUDINARY_API_SECRET=""
 NEXT_PUBLIC_API_ENDPOINT=http://localhost:3000/api
+NEXT_PUBLIC_URL=http://localhost:3000/
+CONTACT_CARD_SIGNATURE_SECRET="secret"
