--- a/packages/app/.env.example
+++ b/packages/app/.env.example
@@ -2,3 +2,4 @@ CLOUDINARY_API_KEY=281326962786824
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=azzapp
 NEXT_PUBLIC_API_ENDPOINT=https://azzapp-staging.vercel.app/api
 NEXT_PUBLIC_URL=https://azzapp-staging.vercel.app/
+APP_SCHEME='azzapp://'
