--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -36,6 +36,7 @@
     "chroma-js": "^2.4.2",
     "events": "^3.3.0",
     "expo": "^48.0.19",
+    "expo-contacts": "^12.0.1",
     "expo-image": "^1.2.3",
     "expo-haptics": "^12.2.1",
     "expo-media-library": "^15.2.3",
@@ -72,7 +73,6 @@
     "use-debounce": "^9.0.4",
     "react-hook-form": "^7.43.9",
     "@hookform/resolvers": "^3.1.0",
-    "vcard-creator": "^0.6.0",
     "react-native-blob-util": "^0.18.3",
     "react-native-share": "^8.2.2"
   },
