--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -18,7 +18,6 @@
     "dev"
   ],
   "dependencies": {
-    "@azzapp/shared": "*",
-    "iron-webcrypto": "^0.6.0"
+    "@azzapp/shared": "*"
   }
 }
