--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "libphonenumber-js": "^1.10.24",
     "react-relay": "^14.1.0",
-    "validator": "13.9.0"
+    "validator": "13.9.0",
+    "vcard-creator": "^0.6.0",
+    "iron-webcrypto": "^0.7.1"
   },
   "devDependencies": {
     "@types/react-relay": "^14.1.2",
