chore: Refactor ci process (#625)
* remove pscale automation

* remove maestro

* Re-enable ps-attach system for pull-request

* Rename github actions workflows

* add concurrency on git hub workflows

* Refactor main branches CI

* adress PR feedbacks

--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -112,6 +112,21 @@ android {
             include (*reactNativeArchitectures())
         }
     }
+    flavorDimensions "env"
+    productFlavors {
+        production {
+            dimension "env"
+            applicationId 'com.azzapp.azzapp'
+        }
+        staging {
+            dimension "env"
+            applicationId 'com.azzapp.azzapp_staging'
+        }
+        development {
+            dimension "env"
+            applicationId 'com.azzapp.azzapp_dev'
+        }
+    }
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
