--- a/packages/app/ios/Podfile
+++ b/packages/app/ios/Podfile
@@ -21,7 +21,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'azzapp' do
+abstract_target 'common' do
   use_expo_modules!
   post_integrate do |installer|
     begin
@@ -71,5 +71,25 @@ target 'azzapp' do
              config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
         end
     end
+
+    # This is necessary for Xcode 14, because it signs resource bundles by default
+    # when building for devices.
+    installer.target_installation_results.pod_target_installation_results
+      .each do |pod_name, target_installation_result|
+      target_installation_result.resource_bundle_targets.each do |resource_bundle_target|
+        resource_bundle_target.build_configurations.each do |config|
+          config.build_settings['CODE_SIGNING_ALLOWED'] = 'NO'
+        end
+      end
+    end
+  end
+
+  target 'azzapp' do
+  end
+
+  target 'azzapp-dev' do
+  end
+
+  target 'azzapp-staging' do
   end
 end
