--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,7 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.4.4",
-    "react-relay": "^14.1.0"
+    "react-relay": "^14.1.0",
+    "sharp": "0.32.1"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
