--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -63,6 +63,7 @@
     "react-native-email-link": "^1.14.5",
     "react-phone-number-input": "^3.2.19",
     "react-native-reanimated-carousel": "^3.3.0",
+    "react-native-toast-message": "^2.1.6",
     "react-relay": "^14.1.0",
     "react-transition-group": "^4.4.5",
     "use-debounce": "^9.0.4",
