build: fix backoffice alias url (#627)

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -223,9 +223,9 @@ jobs:
           if [["${{github.ref}}" == "refs/heads/stable"]; then
             vercel promote --token=${{ secrets.VERCEL_TOKEN }} --prod $DEPLOYMENT_URL
           else 
-            ALIAS_URL="azzapp-dev.vercel.app"
+            ALIAS_URL="azzapp-backoffice-dev.vercel.app"
             if [["${{github.ref}}" == "refs/heads/staging"]; then
-              ALIAS_URL="azzapp-staging.vercel.app"
+              ALIAS_URL="azzapp-backoffice-staging.vercel.app"
             fi
             vercel alias --token=${{ secrets.VERCEL_TOKEN }} --scope=azzapp set "$DEPLOYMENT_URL" "$ALIAS_URL"
           fi
