--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "run:ios": "yarn workspace @azzapp/app run:ios",
     "run:android": "yarn workspace @azzapp/app run:android",
     "update-graphql-schema": "yarn graphql-codegen",
-    "clean": "yarn workspaces run clean && rm -Rf node_mdules && rm -f tsconfig.tsbuildinfo"
+    "clean": "yarn workspaces run clean && rm -Rf node_mdules && rm -f tsconfig.tsbuildinfo",
+    "relase": "release-it"
   },
   "devScripts": [
     "relay:watch",
@@ -48,6 +49,8 @@
     "@graphql-codegen/schema-ast": "^4.0.0",
     "@graphql-codegen/typescript": "^4.0.0",
     "@graphql-codegen/typescript-resolvers": "^4.0.0",
+    "@release-it-plugins/workspaces": "^3.2.0",
+    "@release-it/conventional-changelog": "^6.0.0",
     "@svgr/webpack": "^7.0.0",
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-hooks": "^8.0.1",
@@ -77,7 +80,9 @@
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.8.7",
+    "react-native-version": "^4.0.0",
     "relay-compiler": "^14.1.0",
+    "release-it": "^15.11.0",
     "ts-jest": "^29.1.0",
     "turbo": "^1.8.8",
     "typescript": "^5.1.3"
