--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -191,7 +191,7 @@
         "@typescript-eslint/no-unused-expressions": "error",
         "@typescript-eslint/no-unused-vars": [
           "error",
-          { "argsIgnorePattern": "^_" }
+          { "argsIgnorePattern": "^_", "ignoreRestSiblings": true }
         ],
         "@typescript-eslint/no-useless-constructor": "error",
         "@typescript-eslint/no-useless-empty-export": "error",
