--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,13 +27,11 @@ jobs:
       ############################################
       - name: "Check DATABASE URL"
         run:
-          if [[ -z "$DATABASE_URL" ]]; then
+          if [[ -z "${{ secrets.DATABASE_URL }}" ]]; then
             echo "DATABASE_URL is not set"
           else
             echo "DATABASE_URL is set"
           fi
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - uses: actions/checkout@v3
 
