--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
 jobs:
   release:
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/staging'
+    environment: ${{(github.ref_name == 'stable' && 'Production') || (github.ref_name == 'staging' && 'Staging') || 'Development' }} 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
