--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -100,8 +100,8 @@ android {
         applicationId "com.azzapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1000
-        versionName "0.1.0-rc.0"
+        versionCode 1001
+        versionName "0.1.1-canary.0"
     }
 
     splits {
