--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azzapp/app",
-  "version": "0.1.0-rc.0",
+  "version": "0.1.1-canary.0",
   "scripts": {
     "test": "jest",
     "typecheck": "tsc --noEmit",
