--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azzapp/backoffice",
-  "version": "0.1.0-rc.0",
+  "version": "0.1.1-canary.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 3005",
