--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,7 @@ jobs:
           type: now
           target_branch: stable
           github_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+          label_name: 'chore: merge release'
 
       - name: Merge main into staging
         if: github.ref == 'refs/heads/main'
