--- a/packages/backoffice/package.json
+++ b/packages/backoffice/package.json
@@ -13,9 +13,9 @@
     "dev"
   ],
   "dependencies": {
-    "@azzapp/auth": "0.1.0-rc.0",
-    "@azzapp/data": "0.1.0-rc.0",
-    "@azzapp/shared": "0.1.0-rc.0",
+    "@azzapp/auth": "*",
+    "@azzapp/data": "*",
+    "@azzapp/shared": "*",
     "lodash": "^4.17.21",
     "next": "^13.4.8",
     "react": "^18.2.0",
