--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,7 @@ jobs:
           type: now
           target_branch: staging
           github_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+          label_name: 'chore: merge release'
 
       - name: Bump development version
         if: github.ref == 'refs/heads/main'
