--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,11 +13,11 @@
     "dev"
   ],
   "dependencies": {
-    "@azzapp/auth": "*",
-    "@azzapp/data": "*",
-    "@azzapp/i18n": "*",
-    "@azzapp/relay": "*",
-    "@azzapp/shared": "*",
+    "@azzapp/auth": "0.1.1-canary.0",
+    "@azzapp/data": "0.1.1-canary.0",
+    "@azzapp/i18n": "0.1.1-canary.0",
+    "@azzapp/relay": "0.1.1-canary.0",
+    "@azzapp/shared": "0.1.1-canary.0",
     "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@formatjs/swc-plugin-experimental": "^0.3.7",
     "@paralleldrive/cuid2": "^2.2.0",
