chore: Add eas webhook server to link eas build (#657)
* Use eas-build-post-install instead of postinstall

* remove unused scripts

* chore: add eas webhook server to link eas build

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,7 +9,7 @@
     "run:ios": "react-native run-ios --no-packager",
     "pod-install": "cd ios && bundle exec pod install",
     "clean": "watchman watch-del-all && rm -Rf node_modules && rm -Rf ios/Pods && rm -Rf ios/build  && cd android && ./gradlew clean",
-    "postinstall": "(cd ../.. && yarn build-app-dependencies)"
+    "eas-build-post-install": "(cd ../.. && yarn build-app-dependencies)"
   },
   "devScripts": [
     "rn:watch"
