feat(#617): add post webcard (#651)
* feat: 🎸 add partial posts on web card

✅ Closes: #617

* style: 💄 remove useless comments

* refactor: 💡 improve scroll setup

* style: 💄 fix wrong formating

* refactor: 💡 improve modals

* feat: 🎸 complete webcard with posts

* fix: 🐛 add minor UI improvements

* fix: 🐛 apply fix for backface visibility on chrome & edge

* fix: 🐛 improve generated markup

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -29,11 +29,13 @@
     "react-dom": "^18.2.0",
     "react-intl": "^6.4.4",
     "react-relay": "^14.1.0",
-    "sharp": "0.32.1"
+    "sharp": "0.32.1",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/react": "18.2.12",
-    "@types/react-dom": "^18.2.5"
+    "@types/react-dom": "^18.2.5",
+    "@vanilla-extract/next-plugin": "^2.1.3"
   }
 }
