--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -10,3 +10,4 @@ CLOUDINARY_API_SECRET=""
 NEXT_PUBLIC_API_ENDPOINT=http://localhost:3000/api
 NEXT_PUBLIC_URL=http://localhost:3000/
 CONTACT_CARD_SIGNATURE_SECRET="secret"
+NEXT_PUBLIC_DOWNLOAD_MOBILE_APP=http://www.azzapp.com
